// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers GitignoreAnalyzer should analyze a project with gitignore correctly 1`] = `
Object {
  "gitignore": true,
}
`;

exports[`Analyzers GitignoreAnalyzer should analyze a project without gitignore correctly 1`] = `
Object {
  "gitignore": false,
}
`;
